app/webroot/css/global.css
/* ... */
div.subject {
	float: left;
}


form.search input:active, form.search input:focus {
	background: white;
	border-color: #aaa;
	font-style: normal;
	color: #000;
}

form.search select {
	font-family: inherit;
	font-size: inherit;
	background:url('../img/down_chevron.png') left center no-repeat #196499;
	padding: 5px 5px 5px 20px;
	border: 1px solid #003b65;
	color: white;
	margin: 0 -4px 0 0;
	border-radius: 3px 0 0 3px;
	/*-webkit-appearance: none;*/
    /*-moz-appearance: none;*/
    /*text-indent: 0.01px;*/
    /*text-overflow: '';*/
}

/* Browser Hack to get rid of dropdown - MSIE */
/*form.search select::-ms-expand {*/
    /*display: none;*/
/*}*/

/* Browser hack to get rid of dropdown - FF for Mac (Fix doesn't work on Windows) */
/*@-moz-document url-prefix() {
form.search span.moz-select-wrap {
	background:url('../img/down_chevron.png') left center no-repeat #196499;
	padding: 5px 5px 5px 0px;
	border: 1px solid #003b65;
	color: white;
	margin: 0 -4px 0 0;
	border-radius: 3px 0 0 3px;
	-moz-appearance: none;
    text-indent: 0.01px;
    text-overflow: '';
  }
} */

form.search select, form.search select:active, form.search select:hover {
	outline: none;
	cursor: pointer;
}

form.search select:focus{
	border-color: #333;
	background-color: #1E79BA;
}

form.search h3 {
	margin: 0;
	padding: 0;
}

form.search .datepair input {
	border-radius: 3px;
	width: 130px;
	font-size: .875em;
	border-width: 1px;
	margin-bottom: 4px;
}

div.date-and-time {
	float: left;
	clear: left;
}

div.date-and-time p.datepair {
	margin-bottom: 0;
	padding-bottom: 0;
}


/* Server selection */
div.server-select {
	float: right;
	overflow: hidden;
	position: relative;
}

div.server-select h3 {
	margin: 0 0 10px;
}

div.server-select h3 span {
	font-size: .75em;
	font-weight: normal;
	font-style: italic;
}

div.server-select div.box-selector {
	width: 28%;
	height:100px;
	float:left;
	border: 1px solid #ccc;
	margin:0;
	text-align: center;
	color: #777;
	position: relative; /* necessary for status-indicator positioning */

	/* Get rid of annoying accidental selection */
	/*-webkit-touch-callout: none;*/
	/*-webkit-user-select: none;*/
	/*-khtml-user-select: none;*/
	/*-moz-user-select: none;*/
	/*-ms-user-select: none;*/
	/*user-select: none;*/
}

div.server-select div.box-selector p {
	font-size: .75em;
	margin: 0;
	padding: 0;
}

div.server-select div.box-selector h4 {
	margin: 30px 0 0;
}

div.server-select div.box-selector.on {
	border-color: #137C9C;
	color:#000;
}

div.server-select div.box-selector:hover {
	cursor: pointer;
	color: #333;
	border-color: #777;
}

div.server-select div.box-selector.on:hover {
	cursor: pointer;
	border-color: #137C9C;
	color:#000;
}

div.server-select div.server-arrow {
	width: 28px;
	height: 100px;
	display: block;
	float:left;
	border:1px solid white;
	background:url('../img/server_arrow.png') center center no-repeat #ccc;
}

div.server-select div.server-arrow.on {
	background-color: #137C9C;
}

div.server-select div.box-selector div.status-indicator
{
	position: absolute;
	top: -12px;
	right: -12px;
	height: 25px;
	width: 25px;
	background: url('../img/server_no.png') center center no-repeat transparent;
}

div.server-select div.box-selector.on div.status-indicator {
	background-image:url('../img/server_yes.png');
}

div.server-select input[type="checkbox"]
{
	visibility: hidden;
	position:absolute;
}

form.search input[type="submit"], form.search input[type="submit"]:active  {
	font-family: inherit;
	font-size: inherit;
	background: #196499;
	padding: 5px;
	float: right;
	border: 1px solid #003b65;
	color: white;
	margin: 1px 1.04167% 16px 0;
	border-radius: 3px;
	/*-webkit-appearance: none;*/
	width: 47.6%;
	box-shadow:0 2px 0 #003b65;
}

form.search input[type="submit"]:hover {
	cursor: pointer;
	background-color: #1B6DA8;
}

form.search input[type="submit"]:active {
	background-color: #1E79BA;
	box-shadow:0 1px 0 #003b65;
	margin: 2px 1.04167% 15px 0;
}

/* Table CSS */

table.results, table.results * {
	border-collapse: collapse;
}

table.results {
	width: 100%;
	font-size: .91em;
	font-weight: normal;
}

table.results th {
	background: #236597;
	color: white;
	font-weight: normal;
}

table.results tr {
	/*border:1px solid #759bb8;*/
    border: none;
}

table.results tr:last-child {
	border-bottom-width: 1px;
}

table tr.even-row
{
	background: #EFF6FC;
}

table tr.odd-row
{
	background: white;
}

table.results tr.tr-hover-state, div.rowOverlay .external-link-wrap {
	background: #6da7d3;
}

table.results tr.table-information:hover, table.results tr.log:hover, table.results th:hover {
	cursor: auto;
}

table.results tr.table-information:hover, table.results tr.log:hover {
	background-color: white;
}

table.results td, table.results th {
	padding:5px;
}

table.results tr td:nth-child(1), 
table.results tr td:nth-child(2), 
table.results tr td:nth-child(6), 
table.results tr td:nth-child(7) {
	text-align: center;
}

table.results tr.table-information {
	border-width: 0;
	background-color: white;
}

table.results tr.table-information td {
	text-align: left;
	padding: 10px;
	font-weight: bold;
	font-size: 1.25em;
}

span.canit-sender, span.canit-recipients, span.canit-subject {
	display: block;
	white-space: nowrap;
	text-overflow: ellipsis;
	overflow: hidden;
	max-width: 200px;
}

span.routers-sender, span.routers-recipients {
    display: block;
    white-space: nowrap;
    text-overflow: ellipsis;
    overflow: hidden;
    max-width: 350px;
}

span.exchange-sender, span.exchange-recipients, span.exchange-subject {
    display: block;
    white-space: nowrap;
    text-overflow: ellipsis;
    overflow: hidden;
    max-width: 270px;
}

table tr.log.even-row:hover
{
	background: #EFF6FC;
}

table tr.log.odd-row:hover
{
	background: white;
}

table.results tr:hover {
    background-color: #77aacc;
}

table.results tr.log p {
	font-size: .875em;
	padding: 10px 20px;
	text-align: left;
	font-family: "Source Code Pro", courier new, courier, sans-serif;
}
/* ... */

